# example-python

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/: example.py  main.py
